--- a/basic_app/package.json
+++ b/basic_app/package.json
@@ -10,6 +10,7 @@
     "npx": "^10.2.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-datepicker": "^3.5.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
