--- a/basic_app/package.json
+++ b/basic_app/package.json
@@ -12,7 +12,8 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-data-table-component": "^6.11.7",
-    "react-datepicker": "^3.5.0",
+    "react-date-range": "^1.1.3",
+    "react-datepicker": "^3.6.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
