--- a/basic_app/package.json
+++ b/basic_app/package.json
@@ -8,11 +8,14 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "bootstrap": "^4.6.0",
+    "chart.js": "^2.9.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "jquery": "^3.6.0",
     "npx": "^10.2.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-chartjs-2": "^2.11.1",
     "react-data-table-component": "^6.11.7",
     "react-date-range": "^1.1.3",
     "react-datepicker": "^3.6.0",
