--- a/basic_app/package.json
+++ b/basic_app/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^12.6.2",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
+    "chartjs-plugin-annotation": "^1.0.0-rc",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "jquery": "^3.6.0",
+    "ng2-charts": "^2.4.2",
     "npx": "^10.2.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
