export json to csv

--- a/basic_app/package.json
+++ b/basic_app/package.json
@@ -12,7 +12,9 @@
     "chartjs-plugin-annotation": "^1.0.0-rc",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "fs": "0.0.1-security",
     "jquery": "^3.6.0",
+    "json2csv": "^5.0.6",
     "ng2-charts": "^2.4.2",
     "npx": "^10.2.2",
     "react": "^17.0.1",
