--- a/basic_app/package.json
+++ b/basic_app/package.json
@@ -12,6 +12,7 @@
     "chartjs-plugin-annotation": "^1.0.0-rc",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "file-saver": "^2.0.5",
     "fs": "0.0.1-security",
     "jquery": "^3.6.0",
     "json2csv": "^5.0.6",
@@ -20,6 +21,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-chartjs-2": "^2.11.1",
+    "react-csv": "^2.0.3",
     "react-data-table-component": "^6.11.7",
     "react-date-range": "^1.1.3",
     "react-datepicker": "^3.6.0",
